--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,27 @@
 arrow==1.2.3
 asttokens==2.2.1
+attrs==23.1.0
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
 binaryornot==0.4.4
+Boruta==0.3
 certifi==2023.5.7
 chardet==5.1.0
 charset-normalizer==3.1.0
 click==8.1.3
 comm==0.1.3
+contourpy==1.1.0
 cookiecutter==2.1.1
+cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
 executing==1.2.0
+fastjsonschema==2.17.1
+fonttools==4.40.0
+greenlet==2.0.2
 idna==3.4
+imbalanced-learn==0.10.1
+imblearn==0.0
 importlib-metadata==6.6.0
 inflection==0.5.1
 ipykernel==6.23.1
@@ -20,10 +29,15 @@ ipython==8.14.0
 jedi==0.18.2
 Jinja2==3.1.2
 jinja2-time==0.2.0
+joblib==1.2.0
+jsonschema==4.17.3
 jupyter_client==8.2.0
 jupyter_core==5.3.1
+kiwisolver==1.4.4
 MarkupSafe==2.1.3
+matplotlib==3.7.1
 matplotlib-inline==0.1.6
+nbformat==5.9.0
 nest-asyncio==1.5.6
 numpy==1.25.0
 packaging==23.1
@@ -31,23 +45,38 @@ pandas==2.0.2
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.5.0
 pip==23.1.2
 platformdirs==3.5.3
+plotly==5.15.0
 prompt-toolkit==3.0.38
 psutil==5.9.5
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyaml==23.5.9
 Pygments==2.15.1
+pyparsing==3.1.0
+pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-slugify==8.0.1
 pytz==2023.3
 PyYAML==6.0
 pyzmq==25.1.0
 requests==2.31.0
+scikit-learn==1.2.2
+scikit-optimize==0.9.0
+scikit-plot==0.3.7
+scipy==1.10.1
+seaborn==0.12.2
 setuptools==67.7.2
 six==1.16.0
+sklearn==0.0.post5
+SQLAlchemy==2.0.16
 stack-data==0.6.2
+tenacity==8.2.2
 text-unidecode==1.3
+threadpoolctl==3.1.0
 tornado==6.3.2
 traitlets==5.9.0
 typing_extensions==4.6.3
@@ -55,4 +84,5 @@ tzdata==2023.3
 urllib3==2.0.3
 wcwidth==0.2.6
 wheel==0.40.0
+xgboost==1.7.6
 zipp==3.15.0
